--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
             max-height: 300px;
             object-fit: cover;
             animation: fadeIn 2s ease-in-out;
+            border-radius: 15px;
         }
         .mascot {
             width: 150px;
-            position: absolute;
-            top: 60%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            display: block;
+            margin: -40px auto 0 auto;
             animation: float 3s infinite ease-in-out;
+            border-radius: 15px;
         }
         .container {
             max-width: 800px;
@@ -63,7 +63,7 @@
             max-width: 600px;
             padding: 20px;
             background: #1e1e1e;
-            border-radius: 8px;
+            border-radius: 15px;
             animation: fadeIn 1.5s ease-in-out;
             box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.1);
         }
@@ -88,8 +88,8 @@
     <header>
         <img src="Banner.png" alt="NAP Coin Banner" class="banner">
         <h1>🚀 $NAP Coin - Sleep. Earn. Meme. 😴💰</h1>
-        <img src="Mascot1.png" alt="NAP Coin Mascot" class="mascot">
     </header>
+    <img src="Mascot1.png" alt="NAP Coin Mascot" class="mascot">
     <div class="container">
         <h2>Welcome to the Sleepiest Meme Coin on Solana</h2>
         <p>$NAP Coin is a community-driven meme token. No utility, just pure vibes. Join the movement and ride the wave to the moon! 🌙</p>
