--- a/index.html
+++ b/index.html
@@ -106,18 +106,28 @@
             <p>👥 <strong>10%</strong> Team Allocation (Locked for 12-24 months)</p>
         </div>
 
-        <h2>🛣 Roadmap</h2>
+        <h2>🛒 How to Buy $NAP Coin</h2>
         <div class="content-box">
-            <p>✅ <strong>Phase 1:</strong> Token Launch & Community Growth</p>
-            <p>🚀 <strong>Phase 2:</strong> NFT Airdrops & Listings</p>
-            <p>🌍 <strong>Phase 3:</strong> Major Partnerships & Marketing Push</p>
-            <p>💎 <strong>Phase 4:</strong> To the Moon!</p>
+            <p>1️⃣ <strong>Get Solana (SOL)</strong> – Buy SOL on exchanges like Binance, Coinbase, or Kraken.</p>
+            <p>2️⃣ <strong>Set Up a Wallet</strong> – Install Phantom or Solflare and deposit SOL.</p>
+            <p>3️⃣ <strong>Go to Raydium</strong> – Visit <a href="https://raydium.io/" target="_blank">Raydium.io</a> and swap SOL for $NAP.</p>
+            <p>4️⃣ <strong>Join the Community</strong> – Hold, meme, and ride to the moon! 🚀</p>
+        </div>
+
+        <h2>❓ Frequently Asked Questions</h2>
+        <div class="content-box">
+            <p><strong>Q: Can I really make money while sleeping?</strong></p>
+            <p>A: Yes! But only if you HODL $NAP Coin and dream hard enough. 😆</p>
+            <p><strong>Q: Is $NAP a serious investment?</strong></p>
+            <p>A: This is the **sleepiest** meme coin on Solana. Fun first, profits second. 😂</p>
+            <p><strong>Q: Where can I check the price?</strong></p>
+            <p>A: You can track the price on **Raydium** or **DexScreener** once listed.</p>
         </div>
 
         <h2 id="community">🌐 Join Our Community</h2>
         <div class="content-box">
             <p>Be part of the movement! Follow us on:</p>
-            <a href="https://twitter.com/NAPCoinOfficial" class="btn">Twitter</a>
+            <a href="https://x.com/CoinNap52695" class="btn">Twitter</a>
             <a href="https://t.me/NAPCoinCommunity" class="btn">Telegram</a>
         </div>
     </div>
