--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="content-box">
             <p>Be part of the movement! Follow us on:</p>
             <a href="https://x.com/CoinNap52695" class="btn">Twitter</a>
-            <a href="https://t.me/NAPCoinCommunity" class="btn">Telegram</a>
+            <a href="https://t.me/+Nw7ur-nU2FozOTY6" class="btn">Telegram</a>
         </div>
     </div>
 
