--- a/index.html
+++ b/index.html
@@ -118,8 +118,10 @@
       padding: 0 20px;
     }
 
+    /* Add scroll-margin-top so that sections aren't hidden behind the sticky header */
     .section {
       margin-bottom: 60px;
+      scroll-margin-top: 120px;
     }
 
     .section h2 {
