--- a/index.html
+++ b/index.html
@@ -118,10 +118,11 @@
       padding: 0 20px;
     }
 
-    /* Add scroll-margin-top so that sections aren't hidden behind the sticky header */
+    /* Adjust scroll offset for anchor links.
+       Increase this value if the header is taller. */
     .section {
       margin-bottom: 60px;
-      scroll-margin-top: 120px;
+      scroll-margin-top: 350px;
     }
 
     .section h2 {
