--- a/index.html
+++ b/index.html
@@ -152,17 +152,29 @@
             <p>3️⃣ <strong>Go to Raydium</strong> – Visit <a href="https://raydium.io/" target="_blank">Raydium.io</a> and swap SOL for $NAP.</p>
             <p>4️⃣ <strong>Join the Community</strong> – Hold, meme, and ride to the moon! 🚀</p>
         </div>
-
-        <h2>❓ Frequently Asked Questions</h2>
-        <div class="content-box">
-            <p><strong>Q: Can I really make money while sleeping?</strong></p>
-            <p>A: Yes! But only if you HODL $NAP Coin and dream hard enough. 😆</p>
-            <p><strong>Q: Is $NAP a serious investment?</strong></p>
-            <p>A: This is the **sleepiest** meme coin on Solana. Fun first, profits second. 😂</p>
-            <p><strong>Q: Where can I check the price?</strong></p>
-            <p>A: You can track the price on **Raydium** or **DexScreener** once listed.</p>
+        <div class="container">
+        <h2>📍 $NAP Roadmap</h2>
+        <div class="roadmap">
+            <div class="timeline">
+                <div class="timeline-item"><strong>Q1 2024:</strong> Token Launch, Airdrops, Community Growth.</div>
+                <div class="timeline-item"><strong>Q2 2024:</strong> CEX Listings, Staking Rewards, NFT Collection.</div>
+                <div class="timeline-item"><strong>Q3 2024:</strong> More Exchange Listings, DAO Governance.</div>
+                <div class="timeline-item"><strong>Q4 2024:</strong> Expanding $NAP to the Metaverse.</div>
+            </div>
         </div>
-
+        
+        <h2>❓ Frequently Asked Questions</h2>
+        <div class="faq">
+            <div class="content-box">
+                <p><strong>Q: Can I really make money while sleeping?</strong></p>
+                <p>A: Yes! But only if you HODL $NAP Coin and dream hard enough. 😆</p>
+                <p><strong>Q: Is $NAP a serious investment?</strong></p>
+                <p>A: This is the **sleepiest** meme coin on Solana. Fun first, profits second. 😂</p>
+                <p><strong>Q: Where can I check the price?</strong></p>
+                <p>A: You can track the price on **Raydium** or **DexScreener** once listed.</p>
+            </div>
+        </div>
+    </div>
         <h2 id="community">🌐 Join Our Community</h2>
         <div class="content-box">
             <p>Be part of the movement! Follow us on:</p>
