--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             scroll-behavior: smooth;
         }
         header {
-            padding: 40px 20px;
+            padding: 60px 20px;
             background: linear-gradient(135deg, #1e1e1e, #121212);
             position: relative;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
@@ -42,16 +42,28 @@
             text-align: center;
         }
         h1 {
-            font-size: 2.5rem;
+            font-size: 3rem;
             margin: 20px 0;
             background: linear-gradient(45deg, #ffcc00, #e6b800);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            animation: glow 2s infinite alternate;
         }
         h2 {
-            font-size: 2rem;
+            font-size: 2.2rem;
             margin: 40px 0 20px;
             color: #ffcc00;
+            position: relative;
+            display: inline-block;
+        }
+        h2::after {
+            content: '';
+            display: block;
+            width: 60%;
+            height: 3px;
+            background: linear-gradient(45deg, #ffcc00, #e6b800);
+            margin: 10px auto 0;
+            border-radius: 2px;
         }
         .btn {
             display: inline-block;
@@ -79,6 +91,10 @@
             border-radius: 15px;
             animation: fadeIn 1.5s ease-in-out;
             box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.1);
+            transition: transform 0.3s ease-in-out;
+        }
+        .content-box:hover {
+            transform: translateY(-5px);
         }
         .content-box p {
             margin: 15px 0;
@@ -107,6 +123,10 @@
             0% { transform: translateY(0px); }
             50% { transform: translateY(-10px); }
             100% { transform: translateY(0px); }
+        }
+        @keyframes glow {
+            0% { text-shadow: 0 0 10px rgba(255, 204, 0, 0.7); }
+            100% { text-shadow: 0 0 20px rgba(255, 204, 0, 0.9); }
         }
         .social-links {
             display: flex;
@@ -152,29 +172,17 @@
             <p>3️⃣ <strong>Go to Raydium</strong> – Visit <a href="https://raydium.io/" target="_blank">Raydium.io</a> and swap SOL for $NAP.</p>
             <p>4️⃣ <strong>Join the Community</strong> – Hold, meme, and ride to the moon! 🚀</p>
         </div>
-        <div class="container">
-        <h2>📍 $NAP Roadmap</h2>
-        <div class="roadmap">
-            <div class="timeline">
-                <div class="timeline-item"><strong>Q1 2024:</strong> Token Launch, Airdrops, Community Growth.</div>
-                <div class="timeline-item"><strong>Q2 2024:</strong> CEX Listings, Staking Rewards, NFT Collection.</div>
-                <div class="timeline-item"><strong>Q3 2024:</strong> More Exchange Listings, DAO Governance.</div>
-                <div class="timeline-item"><strong>Q4 2024:</strong> Expanding $NAP to the Metaverse.</div>
-            </div>
-        </div>
-        
+
         <h2>❓ Frequently Asked Questions</h2>
-        <div class="faq">
-            <div class="content-box">
-                <p><strong>Q: Can I really make money while sleeping?</strong></p>
-                <p>A: Yes! But only if you HODL $NAP Coin and dream hard enough. 😆</p>
-                <p><strong>Q: Is $NAP a serious investment?</strong></p>
-                <p>A: This is the **sleepiest** meme coin on Solana. Fun first, profits second. 😂</p>
-                <p><strong>Q: Where can I check the price?</strong></p>
-                <p>A: You can track the price on **Raydium** or **DexScreener** once listed.</p>
-            </div>
+        <div class="content-box">
+            <p><strong>Q: Can I really make money while sleeping?</strong></p>
+            <p>A: Yes! But only if you HODL $NAP Coin and dream hard enough. 😆</p>
+            <p><strong>Q: Is $NAP a serious investment?</strong></p>
+            <p>A: This is the **sleepiest** meme coin on Solana. Fun first, profits second. 😂</p>
+            <p><strong>Q: Where can I check the price?</strong></p>
+            <p>A: You can track the price on **Raydium** or **DexScreener** once listed.</p>
         </div>
-    </div>
+
         <h2 id="community">🌐 Join Our Community</h2>
         <div class="content-box">
             <p>Be part of the movement! Follow us on:</p>
