--- a/index.html
+++ b/index.html
@@ -164,7 +164,16 @@
             <p>🛡 <strong>15%</strong> Reserve Fund</p>
             <p>👥 <strong>10%</strong> Team Allocation (Locked for 12-24 months)</p>
         </div>
-
+        <div class="container">
+        <h2>📍 $NAP Roadmap</h2>
+        <div class="roadmap">
+            <div class="timeline">
+                <div class="timeline-item"><strong>Q1 2024:</strong> Token Launch, Airdrops, Community Growth.</div>
+                <div class="timeline-item"><strong>Q2 2024:</strong> CEX Listings, Staking Rewards, NFT Collection.</div>
+                <div class="timeline-item"><strong>Q3 2024:</strong> More Exchange Listings, DAO Governance.</div>
+                <div class="timeline-item"><strong>Q4 2024:</strong> Expanding $NAP to the Metaverse.</div>
+            </div>
+        </div>
         <h2>🛒 How to Buy $NAP Coin</h2>
         <div class="content-box">
             <p>1️⃣ <strong>Get Solana (SOL)</strong> – Buy SOL on exchanges like Binance, Coinbase, or Kraken.</p>
