--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </div>
         <div class="container">
         <h2>📍 $NAP Roadmap</h2>
-        <div class="roadmap">
+        <div class="content-box">
             <div class="timeline">
                 <div class="timeline-item"><strong>Q1 2024:</strong> Token Launch, Airdrops, Community Growth.</div>
                 <div class="timeline-item"><strong>Q2 2024:</strong> CEX Listings, Staking Rewards, NFT Collection.</div>
