--- a/index.html
+++ b/index.html
@@ -165,7 +165,6 @@
             <p>👥 <strong>10%</strong> Team Allocation (Locked for 12-24 months)</p>
         </div>
         <div class="container">
-            <div class="container">
         <h2>📍 $NAP Roadmap</h2>
         <div class="roadmap">
             <div class="timeline">
@@ -175,6 +174,7 @@
                 <div class="timeline-item"><strong>🛰️ Q4 2024:</strong> Expanding $NAP to the Metaverse.</div>
             </div>
         </div>
+    </div>
     </div>
         <h2>🛒 How to Buy $NAP Coin</h2>
         <div class="content-box">
