--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@
         </div>
         <div class="container">
         <h2>📍 $NAP Roadmap</h2>
+          <div class="container">
+        <h2>📍 $NAP Roadmap</h2>
         <div class="roadmap">
             <div class="timeline">
                 <div class="timeline-item"><strong>🚀 Q1 2024:</strong> Token Launch, Airdrops, Community Growth.</div>
@@ -174,6 +176,7 @@
                 <div class="timeline-item"><strong>🛰️ Q4 2024:</strong> Expanding $NAP to the Metaverse.</div>
             </div>
         </div>
+    </div>
     </div>
     </div>
         <h2>🛒 How to Buy $NAP Coin</h2>
